# master_thesis_project

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: default_params.yaml
notebooks/: 01_explore_tng50.ipynb
notebooks/AIDA-TNG/: 01_density_profiles.ipynb  02_size_mass.ipynb  03_gas_temperature.ipynb
notebooks/TNG50-4/: 01_explore_tng50.ipynb  02_density_profiles.ipynb
scripts/: BayesLineFit_mod.py  extract_galaxies.py  tng.py
src/galaxy_sidm/: __init__.py  config.py  cosmology.py
src/galaxy_sidm/data/: __init__.py  aida_tng.py  halos.py
src/galaxy_sidm/inference/: __init__.py  mcmc.py
src/galaxy_sidm/models/: __init__.py  profiles.py  sam.py  sidm.py
src/galaxy_sidm/observables/: __init__.py  density.py  kinematics.py  scaling.py
